--- a/dna-src/zomes/coolcats/code/Cargo.toml
+++ b/dna-src/zomes/coolcats/code/Cargo.toml
@@ -8,13 +8,13 @@ edition = "2018"
 hdk = "0.0.3"
 holochain_wasm_utils = "0.0.3"
 holochain_core_types_derive = "0.0.3"
-serde = {version = "1.0.86", features = ["derive"]}
+serde = {version = "1.0.87", features = ["derive"]}
 serde_json = "1.0.38"
 
 [patch.crates-io]
-hdk = {git = "https://github.com/holochain/holochain-rust", tag = "v0.0.3"}
-holochain_wasm_utils = {git = "https://github.com/holochain/holochain-rust", tag = "v0.0.3"}
-holochain_core_types_derive = {git = "https://github.com/holochain/holochain-rust", tag = "v0.0.3"}
+hdk = {git = "https://github.com/holochain/holochain-rust", branch = "develop"}
+holochain_wasm_utils = {git = "https://github.com/holochain/holochain-rust", branch = "develop"}
+holochain_core_types_derive = {git = "https://github.com/holochain/holochain-rust", branch = "develop"}
 
 [lib]
 path = "src/lib.rs"
