--- a/dna-src/zomes/coolcats/code/Cargo.toml
+++ b/dna-src/zomes/coolcats/code/Cargo.toml
@@ -12,9 +12,9 @@ serde = {version = "1.0.88", features = ["derive"]}
 serde_json = "1.0.38"
 
 [patch.crates-io]
-hdk = {git = "https://github.com/holochain/holochain-rust", branch = "develop"}
-holochain_wasm_utils = {git = "https://github.com/holochain/holochain-rust", branch = "develop"}
-holochain_core_types_derive = {git = "https://github.com/holochain/holochain-rust", branch = "develop"}
+hdk = {git = "https://github.com/holochain/holochain-rust", tag = "v0.0.4-alpha"}
+holochain_wasm_utils = {git = "https://github.com/holochain/holochain-rust", tag = "v0.0.4-alpha"}
+holochain_core_types_derive = {git = "https://github.com/holochain/holochain-rust", tag = "v0.0.4-alpha"}
 
 [lib]
 path = "src/lib.rs"
