--- a/dna-src/zomes/coolcats/code/Cargo.toml
+++ b/dna-src/zomes/coolcats/code/Cargo.toml
@@ -5,16 +5,15 @@ authors = ["Michael Goldman <mike.goldman@allstreets.org>"]
 edition = "2018"
 
 [dependencies]
-hdk = "0.0.20-alpha3"
-holochain_core_types_derive = "0.0.20-alpha3"
-holochain_wasm_utils = "0.0.20-alpha3"
+hdk = "0.0.21-alpha1"
+holochain_wasm_utils = "0.0.21-alpha1"
+holochain_json_derive = "=0.0.1-alpha2"
 serde = { version = "1.0.89", features = ["derive"] }
 serde_json = "1.0.39"
 
 [patch.crates-io]
-hdk = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.20-alpha3" }
-holochain_core_types_derive = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.20-alpha3" }
-holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.20-alpha3" }
+hdk = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.21-alpha1" }
+holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.21-alpha1" }
 
 [lib]
 crate-type = ["cdylib"]
