--- a/dna-src/zomes/coolcats/code/Cargo.toml
+++ b/dna-src/zomes/coolcats/code/Cargo.toml
@@ -5,15 +5,17 @@ authors = ["Michael Goldman <mike.goldman@allstreets.org>"]
 edition = "2018"
 
 [dependencies]
-hdk = "0.0.23-alpha1"
-holochain_wasm_utils = "0.0.23-alpha1"
-holochain_json_derive = "=0.0.1-alpha2"
+hdk = "=0.0.24-alpha2"
+hdk-proc-macros = "=0.0.24-alpha2"
+holochain_json_derive = "=0.0.15"
+holochain_wasm_utils = "=0.0.24-alpha2"
 serde = { version = "1.0.89", features = ["derive"] }
 serde_json = "1.0.39"
 
 [patch.crates-io]
-hdk = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.23-alpha1" }
-holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.23-alpha1" }
+hdk = { git = "https://github.com/holochain/holochain-rust" }
+hdk-proc-macros = { git = "https://github.com/holochain/holochain-rust" }
+holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust" }
 
 [lib]
 crate-type = ["cdylib"]
